# Auton

./: .gitignore  README.md  pyproject.toml  tmp.json
PLANS/: auto-skill-optimization.md
auton/: README.md  __init__.py  __main__.py
auton/adapters/: __init__.py
auton/agent/: README.md  __init__.py  agent.py  compact_prompts.py  context.py  manager.py  message.py  policies.py  session.py  session_store.py  system_prompt.py  token_utils.py  types.py
auton/api/: README.md
auton/cli/: greeting_context.py  greeting_generator.py  main.py
auton/commands/: README.md  __init__.py  agents_cmd.py  base.py  compact.py  config_cmd.py  context.py  cron_cmd.py  help.py  mcp_cmd.py  memory_cmd.py  model.py  plan.py  registry.py  security_cmd.py  session_cmd.py  skill_cmd.py  tasks_cmd.py  workflow_cmd.py
auton/compress/: __init__.py  boundary.py  compressor.py  config.py  parser.py  prompts.py  pruner.py  sanitizer.py
auton/context_aware/: README.md
auton/core/: README.md  config.py  errors.py  event_types.py  events.py  logging.py  paths.py  redact.py  snapshot.py
auton/cron/: README.md
auton/gateway/: __init__.py  session_factory.py  types.py
auton/heartbeat/: README.md
auton/llm/: README.md  __init__.py  anthropic_provider.py  base.py  events.py  factory.py  minimax_provider.py  prompt.py  provider.py  retry_utils.py
auton/memory/: README.md  __init__.py  auton_md.py  chunking.py  compression_improver.py  config.py  conflict_resolver.py  forgetting.py  global_memory.py  keyword_store.py  memory_generator.py  memory_indexer.py  memory_manager.py  memory_md.py  memory_read_hook.py  memory_watcher.py  msg_id_assigner.py  project_memory.py  retrieval_analytics.py  session_summarizer.py  storage_utils.py  summary_generator.py  summary_parser.py  summary_prompts.py  types.py
auton/planner/: README.md  __init__.py  decomposer.py  engine.py  formatter.py  risks.py  storage.py  types.py
auton/plugins/: README.md
auton/security/: README.md  __init__.py  audit.py  injection.py  key_manager.py  permission.py
auton/skills/: README.md  __init__.py  checker.py  frontmatter.py  injector.py  loader.py  optimizer.py  packager.py  perf_tracker.py  registry.py  semantic_search.py  skill_creator.py  types.py
auton/subagents/: __init__.py  base.py  registry.py  types.py
auton/task/: README.md  __init__.py  manager.py  runner.py  (+2 more)
config/: README.md  default.yaml
docs/: DESIGN.md  Feature.md  OPTIMIZATION.md  auton-system-architecture.md  context-compression-optimization.md  memory-self-learning-optimization.md  memory-self-learning-system.md  subagent-planner-architecture.md  web-request-flow.md
scripts/: README.md  debug_multiturn.py  debug_query.py  debug_query_README.md  debug_tool.py  test_actual_injection.py  test_injection_charclass.py  verify_m5.py
tests/: README.md
(+152 files in other folders)
