[project]
name = "auton"
version = "0.1.0"
description = "Personal AI Agent Assistant"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "loguru>=0.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "chromadb>=0.5.0",
    "sqlite-minutils>=3.0.0",
    "croniter>=2.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
auton = "auton.cli.main:app"

[tool.setuptools]
packages = [
    "auton",
    "auton.core",
    "auton.agent",
    "auton.llm",
    "auton.tools",
    "auton.tools.browser",
    "auton.cli",
    "auton.web",
]

[tool.setuptools.package-data]
"auton.web" = ["static/*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
